--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.6.2",
+    "@mdxeditor/editor": "^1.14.3",
+    "@reduxjs/toolkit": "^2.0.1",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.0.4",
+    "sonner": "^1.2.4"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
