Home Page, pagination, post rendering

--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -12,6 +12,7 @@
     "@mdxeditor/editor": "^1.14.3",
     "@reduxjs/toolkit": "^2.0.1",
     "next": "14.0.4",
+    "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.4",
