--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@mdxeditor/editor": "^1.14.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@reduxjs/toolkit": "^2.0.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.4",
-    "sonner": "^1.2.4"
+    "sonner": "^1.2.4",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
