--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-redux": "^9.0.4",
     "react-share": "^5.0.3",
+    "rehype-highlight": "^7.0.0",
     "sonner": "^1.2.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
