better cookie handling, fix logout quirks, onboarding

--- a/blog-frontend/Dockerfile
+++ b/blog-frontend/Dockerfile
@@ -3,7 +3,7 @@ RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
 COPY package.json package-lock.json ./
-RUN npm install --production
+RUN npm install
 
 FROM node:lts-alpine as next_builder
 WORKDIR /app
