add env examples, fix post title urls

--- a/blog-frontend/Dockerfile
+++ b/blog-frontend/Dockerfile
@@ -6,21 +6,27 @@ COPY package.json package-lock.json ./
 RUN npm install
 
 FROM node:lts-alpine as next_builder
+ARG NEXT_PUBLIC_API_URL
+ARG NEXT_INTERNAL_API_URL
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-ENV NEXT_PUBLIC_API_URL http://localhost:9003/api
-ENV NEXT_INTERNAL_API_URL=http://redy-blog-api:9003/api
+ENV NEXT_PUBLIC_API_URL ${NEXT_PUBLIC_API_URL}
+ENV NEXT_INTERNAL_API_URL ${NEXT_INTERNAL_API_URL}
 ENV NEXT_TELEMETRY_DISABLED 1
 RUN npm run build
 
 FROM node:lts-alpine as next_runner
+ARG UI_PORT=3003
+ARG NEXT_PUBLIC_API_URL
+ARG NEXT_INTERNAL_API_URL
+
 WORKDIR /app
 
 ENV NODE_ENV production
-ENV PORT 3003
-ENV NEXT_PUBLIC_API_URL http://localhost:9003/api
-ENV NEXT_INTERNAL_API_URL=http://redy-blog-api:9003/api
+ENV PORT ${UI_PORT}
+ENV NEXT_PUBLIC_API_URL ${NEXT_PUBLIC_API_URL}
+ENV NEXT_INTERNAL_API_URL ${NEXT_INTERNAL_API_URL}
 
 COPY --from=next_builder /app/.next/standalone ./
 COPY --from=next_builder /app/.next/static ./.next/static
@@ -28,5 +34,5 @@ COPY --from=next_builder /app/next.config.js ./
 COPY --from=next_builder /app/package.json ./package.json
 
 
-EXPOSE 3003
+EXPOSE ${UI_PORT}
 ENTRYPOINT [ "node", "server.js"]
