--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,15 @@ services:
     container_name: redy-blog-ui
     build:
       context: ./blog-frontend
+      args:
+        - UI_PORT=${UI_PORT}
+        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+        - NEXT_INTERNAL_API_URL=${NEXT_INTERNAL_API_URL}
     depends_on:
       - redy-blog-api
     ports:
-      - 3003:3003
+      - ${UI_PORT}:${UI_PORT}
 
-    
   redy-blog-api:
     container_name: redy-blog-api
     build:
@@ -25,8 +28,8 @@ services:
       SERVER_PORT: ${SERVER_PORT}
       API_PATH: ${API_PATH}
     ports:
-      - 9003:9003
-    
+      - ${SERVER_PORT}:${SERVER_PORT}
+
   postgres:
     container_name: app_postgres
     image: postgres:14-alpine
